--- a/src/main/res/layout/edit_text_layout.xml
+++ b/src/main/res/layout/edit_text_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_layout"
@@ -14,7 +14,8 @@
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="UserName"/>
+            android:gravity="right"
+            />
     </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
