create mode for EditText

--- a/src/main/res/values/attrs.xml
+++ b/src/main/res/values/attrs.xml
@@ -2,7 +2,7 @@
 <resources>
     <declare-styleable name="DCView" >
         <attr name="font" format="string"/>
-        <attr name="number_format" format="integer">
+        <attr name="format" format="integer">
             <enum name="normal" value="0"/>
             <enum name="normal_number_persian" value="1"/>
             <enum name="amount_persian" value="2"/>
